configracion del archivo webpack config con los modulos salida y plugins, se realizo la configuracion del template y demas

--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,6 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<script src="../dist/main.js" type="module"></script>
+		<h1>holis le monde</h1>
 	</body>
 </html>
