--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,7 @@
 	</head>
 	<body>
 		<h1>holis le monde</h1>
+
+		<img src="assets/img/webpack-logo.png" alt="" class="Webpack logo" />
 	</body>
 </html>
